// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should reduce fetch config failure 1`] = `
Object {
  "data": null,
  "isLoading": false,
}
`;

exports[`should reduce fetch config request 1`] = `
Object {
  "data": null,
  "isLoading": true,
}
`;

exports[`should reduce fetch config success 1`] = `
Object {
  "data": Object {
    "accountsUrl": "dummyAccountsUrl",
  },
  "isLoading": false,
}
`;

exports[`should reduce to default 1`] = `Object {}`;
